# Avandra

./: .eslintrc.js  .gitignore  App.tsx  app.json  metro.config.js  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/debug/java/com/avandra/: ReactNativeFlipper.java
android/app/src/main/java/com/avandra/: MainActivity.java  (+1 more)
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/Avandra/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/Avandra.xcodeproj/: project.pbxproj
ios/Avandra.xcodeproj/xcshareddata/xcschemes/: Avandra.xcscheme
ios/Avandra.xcworkspace/: contents.xcworkspacedata
ios/AvandraTests/: AvandraTests.m
src/: Bimap.ts  MainLoop.tsx  Maybe.ts  Nav.tsx  NavButtons.tsx  NavState.tsx  NavStore.tsx  NavStyles.tsx  NavViewModel.tsx  RootViews.tsx  Store.tsx  model.tsx
src/components/: card.tsx  hrule.tsx
src/components/Card/: card.tsx
src/designFramework/: Button.ts  Color.ts  DF.ts  Font.ts  icons.ts  theme.ts
src/forecast/: styles.tsx  view.tsx
src/journals/: view.tsx
src/ml/: Nat.hs  Vect.hs  ml-lib.hs  mllib.cabal
src/ml/src/: MLLib.hs  Nat.hs  Vect.hs  ml-lib.hs
src/nav/: model.tsx  styles.tsx  view.tsx
src/screens/Forecast/: styles.tsx  view.tsx
src/screens/Journals/: styles.tsx  view.tsx
src/screens/Nav/: model.tsx  styles.tsx  view.tsx
src/theme/: Border.ts  Button.ts  Card.ts  Color.ts  Font.ts  icons.ts  theme.ts
src/theme/Button/: styles.tsx  view.tsx
src/theme/Card/: styles.tsx  view.tsx
src/theme/Hrule/: styles.tsx  view.tsx
(+1 files in other folders)
