cabal-version:      2.4
name:               mllib
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Harley D. Eades III
maintainer:         harley.eades@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        MLLib
        Nat
        Vect

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions: DataKinds GADTs
    build-depends:    base ^>=4.16.4.0, singletons-th >=3.1
    hs-source-dirs:   src
    default-language: Haskell2010
